FIX: checklist popup and alignment issues

--- a/src/components/checklist/styles.scss
+++ b/src/components/checklist/styles.scss
@@ -69,4 +69,8 @@
   .list-section {
     padding: 20px;
   }
+
+  .ant-checkbox-wrapper-checked {
+    text-decoration: line-through;
+  }
 }
