--- a/src/components/groups/groupsCard/styles.scss
+++ b/src/components/groups/groupsCard/styles.scss
@@ -55,24 +55,3 @@
     color: #1e265e;
   }
 }
-
-// collection-dropdown
-.collection-dropdown {
-  .ant-dropdown-menu {
-    width: 214px;
-    padding: 14px;
-    border-radius: 8px;
-    border: 1px solid $borderColor;
-  }
-
-  .ant-dropdown-menu-item {
-    font-size: 18px;
-    padding: 10px 12px;
-    color: #425466;
-  }
-
-  .anticon {
-    font-size: 16px;
-    margin-right: 15px;
-  }
-}
